# ksimopts-svn

trunk/: Doxyfile  Makefile.am  Makefile.in  ccelement.cpp  ccelement.h  chopupelement.cpp  chopupelement.h  chopuplist.cpp  chopuplist.h  configure.in  configure.in.in  finalcost.cpp  finalcost.h  formulaelement.cpp  formulaelement.h  formulalist.cpp  formulalist.h  ksimopts.cpp  ksimopts.desktop  ksimopts.h  ksimopts.kdevelop  ksimopts.kdevelop.pcs  ksimopts.kdevses  ksimopts.lsm  main.cpp  netlist.cpp  netlist.h  nodeelement.cpp  nodeelement.h  nodelist.cpp  nodelist.h  olelement.cpp  olelement.h  rclelement.cpp  rclelement.h  scelement.cpp  scelement.h  smatrix.cpp  smatrix.h  sparameter.cpp  (+5 more)
trunk/doc/: Makefile.am  Makefile.in
trunk/doc/en/: Makefile.am  Makefile.in  index.docbook
trunk/src/: Makefile.am  Makefile.in  ccelement.cpp  ccelement.h  ccelement_interface.h  chopupelement.cpp  chopupelement.h  chopuplist.cpp  chopuplist.h  finalcost.cpp  finalcost.h  formulaelement.cpp  formulaelement.h  formulalist.cpp  formulalist.h  ksimopts.cpp  ksimopts.desktop  ksimopts.h  ksimopts.lsm  ksimopts_client.cpp  ksimoptsiface.h  ksimoptsui.rc  ksimoptsview.cpp  ksimoptsview.h  main.cpp  netlist.cpp  netlist.h  nodeelement.cpp  nodeelement.h  nodelist.cpp  nodelist.h  olelement.cpp  olelement.h  pref.cpp  pref.h  rclelement.cpp  rclelement.h  scelement.cpp  scelement.h  smatrix.cpp  (+7 more)
